--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=MrFelipeTorres_sonarQuest
 sonar.organization=mrfelipetorres
 
-#sonar.projectKey=com.ford:dropfire-Service14
-#sonar.projectName=dropfire-service-cvnotificationgateway
+sonar.projectKey=com.ford:dropfire-Service14
+sonar.projectName=dropfire-service-cvnotificationgateway
 sonar.coverage.exclusions=**/*Application.java,**/configs/*.java,**/data/*.java,**/model/*.java,**/configuration/*.java,**/dao/*.java,**/common/*.java,**/util/ErrorModelBuilderforPush.java
 sonar.projectVersion=1.0
 sonar.sources=src
