--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,8 @@
 sonar.projectKey=MrFelipeTorres_sonarQuest
 sonar.organization=mrfelipetorres
 
-sonar.projectKey=com.ford:dropfire-Service14
-sonar.projectName=dropfire-service-cvnotificationgateway
-sonar.coverage.exclusions=**/*Application.java,**/configs/*.java,**/data/*.java,**/model/*.java,**/configuration/*.java,**/dao/*.java,**/common/*.java,**/util/ErrorModelBuilderforPush.java
-sonar.projectVersion=1.0
-sonar.sources=src
-sonar.java.binaries=build/classes
-sonar.test.inclusions=**/*test*/**
-sonar.exclusions=**/*test*/**,**/model/*.java,**/util/ErrorModelBuilderforPush.java
-
-sonar.core.codeCoveragePlugin=jacoco
-sonar.language=java,kotlin
-sonar.coverage.jacoco.xmlReportPaths=build/jacoco/report.xml
+sonar.exclusions=*.java
+sonar.coverage.exclusions=*.java
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=sonarQuest
