--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=MrFelipeTorres_sonarQuest
 sonar.organization=mrfelipetorres
 
-sonar.exclusions=*.java
-sonar.coverage.exclusions=*.java
+sonar.exclusions=**/*.java
+sonar.coverage.exclusions=**/*.java
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=sonarQuest
